@@ -48,10 +48,11 @@ class Gem::RemoteFetcher
   # already there.  If the source_uri is local the gem cache dir copy is
   # always replaced.
   def download(spec, source_uri, install_dir = Gem.dir)
+    cache_dir = File.join install_dir, 'cache'
     gem_file_name = "#{spec.full_name}.gem"
-    local_gem_path = File.join install_dir, 'cache', gem_file_name
+    local_gem_path = File.join cache_dir, gem_file_name
 
-    Gem.ensure_gem_subdirectories install_dir
+    FileUtils.mkdir_p cache_dir rescue nil unless File.exist? cache_dir
 
     source_uri = URI.parse source_uri unless URI::Generic === source_uri
     scheme = source_uri.scheme
